Restart dialog, background en action bar toegevoegd.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Hello World, Connect4!</string>
-    <string name="app_name">Connect4</string>
+    <string name="app_name">Connect 4</string>
+    <string name="title">Connect 4</string>
 
 </resources>
